# 3DReconstruct

./: NextSteps.md  README.md  blend.py  calib.md  kinect.yaml  kinectNotes.md  rgbd-slam.md
MeshRecon/: Mesh_recon.py
MeshRecon/data/: box_yellow_non_merged.ply
MeshRecon/result/: ao_1.ply
backgroundRemoval/: backgroundremoval.ipynb  bg_method1.ipynb  bg_method2.ipynb  global_registration2.ipynb  registration.ipynb
backgroundRemoval/objects/: ao_1.pcd  ao_1.ply  ball2_object.pcd  ball3_object.pcd  ball_object.pcd  cap1_object.pcd  cap_object.pcd  creal_g_lie.pcd  creal_y_lie.pcd  stereo_object1.pcd  stereo_object2.pcd  y_box_c.pcd  y_box_stand2.pcd
bias correction/: RF_april_generate_traiing_data.ipynb  generate_traiing_data.ipynb  training.ipynb
bias correction/plot/: RF_err_depth_plot.eps  nn_2.eps  nn_3.eps  org_1.eps  org_2.eps  rf_1.eps
biasCorrection/: april_generate_traiing_data.ipynb  training_RF (1).ipynb  training_RF.ipynb
biasCorrection/learned_model/: saved_model.pb
biasCorrection/plot/: err_depth_plot.eps  nn_1.eps  org_3.eps  rf_2.eps  rf_3.eps
geometricRegistration/: ransac_icp_colored_regi.py
geometricRegistration/results/: bunny_registration.pcd  colored_wall_registration.pcd  (+2 more)
pcd/: instructions.md  pcd_display  pcd_display.cpp
pointCloudGen/: README.md  calib.md  extraInfo.md  pcd.md
pointCloudGen/pcd/pcd_display_files/: CMakeLists.txt  pcd_display.cpp
pointCloudGen/pcd/ply2pcd_files/: CMakeLists.txt
registration/: depth_rgb_registration.m  register.m
vid2dataset/: vid2dataset.sln
visuals/: bufferTo16bitGrayscalePng.py
(+70 files in other folders)
